edit button replaced with cogs and top/right-aligned to prevent page-stutter, uses fade instead of show to maintain position persistence; updated mongo article schema to include 'author'; have angular template rendering article author and date instead of fixed data (sorry Billy ;p)

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -79,6 +79,9 @@ h6 {
 .edit-content {
     display: none;
     margin-left: 5px;
+    cursor: pointer;
+    float: right;
+    vertical-align: top;
 }
 
 /* BLOG TIMELINE */
